--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.2",
@@ -17,6 +18,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8"
   }
 }
