--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@astrojs/react": "^2.1.3",
+    "@astrojs/svelte": "^2.1.1",
     "@astrojs/tailwind": "^3.1.2",
     "@astropub/icons": "^0.2.0",
-    "astro": "^2.3.4",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro": "^2.3.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-table": "^7.8.0",
+    "svelte": "^3.54.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@types/react-table": "^7.7.14",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8"
   }
